# FirstPersonSanta

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  README.txt  main.c
assets/: Makefile  bear.blend  bed_bunk.blend  bed_double.blend  bed_single.blend  bench.blend  blend2glb.py  bookcase_closed.blend  bookcase_closed_doors.blend  bookcase_closed_wide.blend  bookcase_open.blend  books.blend  cabinet_bed.blend  cabinet_bed_drawer.blend  cabinet_bed_drawer_table.blend  cabinet_television.blend  cabinet_television_doors.blend  cardboard_box_closed.blend  cardboard_box_open.blend  chair.blend  chair_rounded.blend  choinka.blend  coat_rack.blend  coat_rack_standing.blend  computer_screen.blend  cube.blend  desk.blend  fireplace.blend  gift.blend  lamp.blend  lamp_round_floor.blend  lamp_round_table.blend  lounge_chair.blend  lounge_sofa.blend  monkey.blend  plant_small_1.blend  plant_small_2.blend  plant_small_3.blend  potted_plant.blend  quad.blend  (+14 more)
common/: aabb.c  aabb.h  entity.c  entity.h  gl.h  gltf.c  malloc.c  malloc.h  mat4.c  material.c  material.h  matrix.h  mesh.c  mesh.h  number.c  quat.c  texture.c  texture.h  vec3.c  vec4.c
game/: actions.c  actions.h  blu_camera.c  blu_camera.h  blu_choinka.c  blu_generic.c  blu_gift.c  blu_ground.c  blu_lamp.c  blu_player.c  blu_portal.c  blu_sofa.c  canvas.c  canvas.h  client.c  client.h  com_camera.c  com_camera.h  com_collide.c  com_collide.h  com_control_camera.c  com_control_camera.h  com_control_player.c  com_control_player.h  com_light.c  com_light.h  com_mimic.c  com_mimic.h  com_move.c  com_move.h  com_render.c  com_render.h  com_rigid_body.c  com_rigid_body.h  com_shoot.c  com_shoot.h  com_transform.c  com_transform.h  com_trigger.c  com_trigger.h  (+43 more)
models/: bear.glb  bed_bunk.glb  bed_double.glb  bed_single.glb  bench.glb  bookcase_closed.glb  bookcase_closed_doors.glb  bookcase_closed_wide.glb  bookcase_open.glb  books.glb  cabinet_bed.glb  cabinet_bed_drawer.glb  cabinet_bed_drawer_table.glb  cabinet_television.glb  cabinet_television_doors.glb  cardboard_box_closed.glb  cardboard_box_open.glb  chair.glb  chair_rounded.glb  choinka.glb  coat_rack.glb  coat_rack_standing.glb  computer_screen.glb  cube.glb  desk.glb  fireplace.glb  gift.glb  lamp.glb  lamp_round_floor.glb  lamp_round_table.glb  lounge_chair.glb  lounge_sofa.glb  monkey.glb  plant_small_1.glb  plant_small_2.glb  plant_small_3.glb  potted_plant.glb  quad.glb  radio.glb  side_table.glb  (+12 more)
rooms/: room00.blend  room01.blend  room02.blend  room03.blend  room04.blend  room05.blend  room06.blend  room07.blend  room08.blend  room09.blend  room10.blend
scenes/: room01.gltf  room02.gltf  room03.gltf  room04.gltf  room05.gltf  room06.gltf  room07.gltf  room08.gltf  room09.gltf  room10.gltf  scene0.gltf  scene1.blend  scene1.blend1  scene1.gltf  scene2.gltf  scene3.gltf
scenes-blender/: scene0.blend  scene1.blend  scene2.blend  scene3.blend
